# Telegram_project

./: .env  Dockerfile  docker-compose.yml  main.py  pyproject.toml  requirements.txt
tg_api/: config.py  func.py
tg_api/admin_app/: admin.py  constants.py  keyboards.py
tg_api/app/: constants.py  hendlers.py  keyboards.py
tg_api/models/: db_helper.py  models.py
