[tool.poetry]
name = "tg-shop"
version = "0.1.0"
description = "Shop telegram"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
aiogram = "^3.10.0"
pydantic = {extras = ["settings"], version = "^2.8.2"}
pydantic-settings = "^2.4.0"
sqlalchemy = {extras = ["asyncio"], version = "^2.0.32"}
psycopg2-binary = "^2.9.9"
fastapi = "^0.112.0"
asyncpg = "^0.29.0"
psycopg = "^3.2.1"
uvicorn = "^0.30.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
